<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/dark"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/players"
            android:textSize="40sp"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/txt_player_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:padding="10dp"
            android:hint="@string/txt_player_1"
            android:autofillHints="name"
            android:background="@drawable/border"
            android:inputType="text"
            android:textSize="25sp"
            android:textStyle="italic"
            android:textColor="@color/neon"/>

        <EditText
            android:id="@+id/txt_player_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/txt_player_2"
            android:autofillHints="name"
            android:background="@drawable/border"
            android:inputType="text"
            android:textSize="25sp"
            android:textStyle="italic"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:textColor="@color/neon"/>

        <Button
            android:id="@+id/btn_jugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_jugar"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:backgroundTint="@color/neon"/>
    </LinearLayout>


</LinearLayout>